0.6.9	2012-05-29

 BUG FIXES

  * ``bzr git-import`` only creates colocated branches now if
    the --colocated option is specified. (Jelmer Vernooij)

  * Convert `~` to `_` when pushing into git, as `~` is not allowed in
    refs. (Jelmer Vernooij)

  * Support optional timeout argument to ``bzr serve --git``.
    (Jelmer Vernooij)

0.6.8	2012-03-28

 BUG FIXES

  * Fixes duplicate tag warnings in 'git-remote-bzr' helper.
    (Jelmer Vernooij, #905275)

  * Don't suggest development-subtree when submodules are encountered.
    (Jelmer Vernooij, #951494)

  * Print proper error when encountering data that can't be roundtripped.
    (Jelmer Vernooij)

  * Ignore control directory filenames on Windows, too.
    (Jelmer Vernooij, #967054)

  * Fix 'Unable to obtain lock' error when dpushing from a bound branch.
    (Jelmer Vernooij, #949557)

  * Cope with commits with a completely empty tree.
    (Jelmer Vernooij, #933132)

 TESTS

  * Add test to verify that certain invalid timezones ("--700") are
    roundtripped correctly. (Jelmer Vernooij, #697828)

0.6.7	2012-01-25

 CHANGES

  * Switch to supporting bzr 2.5 only. (Jelmer Vernooij)

 PERFORMANCE

  * "git:" revision specifier now avoids full branch history
    access if it can. (Jelmer Vernooij)

 DOCUMENTATION

  * Added manual page for git-remote-bzr. (Jelmer Vernooij0

 BUG FIXES

  * Support setting branch nicks. (Jelmer Vernooij, #731239)

  * Support Repository.set_make_working_trees(). (Jelmer Vernooij, #777065)

 FEATURES

  * Add 'github:' directory service. (Jelmer Vernooij)

0.6.6	2011-12-15

 BUG FIXES

  * Warn about ignoring path segment parameters when using bzr
    2.4. (Jelmer Vernooij, #887785)

  * Don't request unpeeled objects, newer versions of github refuse it.
    (Jelmer Vernooij, #897951)

  * Specify proper number of arguments to action() handler.
    (Jelmer Vernooij, #894195)

  * Fix compatibility with beta 4 of bzr 2.5.
    (Jelmer Vernooij)

 FEATURES
