@@ -1,4 +1,4 @@
-# Copyright (C) 2007-2010 Jelmer Vernooij <jelmer@samba.org>
+# Copyright (C) 2007-2012 Jelmer Vernooij <jelmer@samba.org>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -22,7 +22,6 @@ from bzrlib import (
     trace,
     ui,
     urlutils,
-    version_info as bzrlib_version,
     )
 from bzrlib.errors import (
     BzrError,
