@@ -1,6 +1,6 @@
-# Copyright (C) 2008 Jelmer Vernooij
+# Copyright (C) 2008-2012 Jelmer Vernooij
 # Copyright (C) 2008 John Carr
-# Copyright (C) 2008 Canonical Ltd
+# Copyright (C) 2008-2011 Canonical Ltd
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
